# mldft1d

./: .gitignore  .pre-commit-config.yaml  Makefile  Params.yaml  README.md  Read_data.py  data.hdf5  gauss_perturb.py  generate_data.py  generate_yaml.py  grid1d.py  hard_rods_fmt.py  mlcdft.py  nn_function.py  setup.cfg  test.py
examples/: .gitignore  cosine.yaml  cosine_2.yaml  gauss.yaml  gauss_0.1.yaml  loss.plot  rectangular.yaml  test-gauss.yaml  test-real.yaml  test.py  test.yaml  train.job
examples/data/: random.job
examples/hardrodmixture/: generate_random.job  generate_random.py  test.yaml
examples/hardrods/: generate_random.job  generate_random.py  test-real.yaml  test.py  test.yaml  train-gauss.job  train-gauss.yaml  train.job  train.yaml
examples/hf/: generate_random.job  generate_random.py  generate_random_molecules.job  generate_random_molecules.py  test.yaml  test_common.yaml  test_molecule.yaml  test_random.yaml
examples/ising/: generate_random.py  generate_random_cpu.job  test.yaml  test_common.yaml  test_random.yaml
examples/kohnsham/: generate_random.job  generate_random.py  generate_random_cpu.job  random.job  random.yaml  test.yaml  test_common.yaml  test_fixed.yaml  test_random.yaml  train-3layer.job  train-3layer.yaml  train-5layer.job  train-5layer.yaml  train-gauss.yaml  train.job  train.yaml  train_cpu.job
examples/train-2-30-30/: train.yaml
examples/train-2-90-90/: train.yaml
examples/train-T1-R0.5/: cosine.job  (+6 more)
examples/train-T1-R0.5-small/: train.yaml
mlcdft/: __init__.py  data.py  minimizer.py  trainer.py
src/: mypy.ini
(+137 files in other folders)
