[metadata]
name = hardrods1d
author = QimPy Collaboration
author_email = author@example.com
description = Prototype ML classical DFT using 1D hard-rod fluid
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hardrods1d.org
project_urls =
    Bug Tracker = https://github.com/shankar1729/hardrods1d/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include-package-data = True
python_requires = >=3.8
install_requires =
    qimpy

[options.packages.find]
where = src

[options.package_data]
* = py.typed
