[metadata]
name = mldft1d
author = QimPy Collaboration
author_email = author@example.com
description = Machine-learned density functionals in 1D
long_description = file: README.md
long_description_content_type = text/markdown
url = https://qimpy.org
project_urls =
    Bug Tracker = https://github.com/shankar1729/mldft1d/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include-package-data = True
python_requires = >=3.8
install_requires =
    qimpy

[options.packages.find]
where = src

[options.package_data]
* = py.typed
